fix nil pointers
