# docs/swagger.json
@@ -62,6 +62,11 @@
         },
         "/tap/balance/:asset_id": {
             "get": {
+                "security": [
+                    {
+                        "OAuth2Password": []
+                    }
+                ],
                 "description": "Current user's balance in satoshi",
                 "consumes": [
                     "application/json"
@@ -97,6 +102,11 @@
         },
         "/tap/balances/all": {
             "get": {
+                "security": [
+                    {
+                        "OAuth2Password": []
+                    }
+                ],
                 "description": "Retrieve all user balances",
                 "consumes": [
                     "application/json"
@@ -132,6 +142,11 @@
         },
         "/tap/create-address": {
             "post": {
+                "security": [
+                    {
+                        "OAuth2Password": []
+                    }
+                ],
                 "description": "Get or create address for deposit",
                 "consumes": [
                     "application/json"
@@ -187,6 +202,11 @@
         },
         "/tap/transfer": {
             "post": {
+                "security": [
+                    {
+                        "OAuth2Password": []
+                    }
+                ],
                 "description": "Transfer assets to an address",
                 "consumes": [
                     "application/json"
